--- a/secrets.toml
+++ b/secrets.toml
@@ -1,4 +1,2 @@
-
-OPENAI_API_KEY = "your_openai_api_key"
-VINTRACE_API_KEY = "your_vintrace_api_key"
-SHARED_PASSWORD = "your_shared_password"
+OPENAI_API_KEY = "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"
+API_TOKEN = "Isu_47--TsjkPFCge3-fEu_hnKwIbo92u2HztCERYJdPB_zvEuxDLQz25qND"
