--- a/secrets.toml
+++ b/secrets.toml
@@ -1,2 +1,3 @@
 OPENAI_API_KEY = "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"
 API_TOKEN = "Isu_47--TsjkPFCge3-fEu_hnKwIbo92u2HztCERYJdPB_zvEuxDLQz25qND"
+SHARED_PASSWORD = "your_shared_password"
